--- a/assets/templates/default/header.ejs
+++ b/assets/templates/default/header.ejs
@@ -283,7 +283,7 @@
                     <a href="/index"><b><% if (lan == 'eng') { %>Pheno-diagnosis<% } else { %>症状诊断<% } %></b></a>
                 </div>
                 <div class="col-md-3 nav-module <%-navModule==1 ? 'nav-module-selected' : ''%>" title="开发中">
-                    <b><% if (lan == 'eng') { %>Geno-diagnosis<% } else { %>基因诊断<% } %></b>
+                    <a href="/gene_diag"><b><% if (lan == 'eng') { %>Geno-diagnosis<% } else { %>基因诊断<% } %></b></a>
                 </div>
                 <div class="col-md-3 nav-module" title="开发中"><b><% if (lan == 'eng') { %>Syn-diagnosis<% } else { %>综合诊断<% } %></b></div>
                 <div class="col-md-3 nav-module <%-navModule==3 ? 'nav-module-selected' : ''%>">
